# braine

./: .gitignore  Cargo.toml  LICENSE  README.md  audit.toml
.cargo/: audit.toml
.github/: copilot-instructions.md
.github/workflows/: pages.yml  release.yml  rust.yml
benches/: substrate.rs
braine_vis/: Cargo.toml
braine_vis/src/: main.rs  main_macroquad.rs.bak
braine_vis/src/games/: beacon.rs  forage.rs  mod.rs  sequence.rs  spot.rs  whack.rs
braine_vis/ui/: main.slint
brained/: Cargo.toml  README.md
brained/src/: game.rs  main.rs  paths.rs
crates/braine_desktop/: Cargo.toml
crates/braine_desktop/src/: main.rs
crates/braine_desktop/src/games/: forage.rs
crates/braine_desktop/ui/: about.slint  canvases.slint  main.slint  panels.slint  theme.slint  types.slint
crates/braine_web/: Cargo.toml  DEPLOYMENT.md  Trunk.toml  app.css  index.html  rust-toolchain.toml
crates/braine_web/src/: lib.rs  main.rs  pong_web.rs  sequence_web.rs  text_web.rs  ui_model.rs  web.rs
crates/braine_web/src/web/: brain_factory.rs  canvas.rs  charts.rs  files.rs  float_fmt.rs  indexeddb.rs  latex.rs  markdown.rs  math.rs  mermaid.rs  parameter_field.rs  pong_web.rs  runtime.rs  sequence_web.rs  settings_schema.rs  shell.rs  storage.rs  text_web.rs  tokens.rs  tooltip.rs  types.rs
crates/brained/: Cargo.toml  README.md
crates/brained/src/: advisor.rs  experts.rs  game.rs  main.rs  paths.rs  state_image.rs
crates/core/: Cargo.toml
crates/core/benches/: substrate.rs
crates/core/src/: lib.rs  main.rs
crates/core/src/core/: causality.rs  gpu.rs  prng.rs  storage.rs  substrate.rs  supervisor.rs
crates/core/src/experiments/: assays.rs  env_pong.rs  mod.rs
crates/shared/braine_games/: Cargo.toml
crates/shared/braine_games/src/: bandit.rs  brain_io.rs  lib.rs  maze.rs  pong.rs  replay.rs  sequence.rs  spot.rs  spot_reversal.rs  spot_xy.rs  stats.rs  text_next_token.rs  time.rs
doc/: README.md  accelerated-learning.md  active.md  architecture.md  brain-image.md  capabilities-checklist.md  enhancement-proposal.md  experiments.md  flowchart TD.mmd  game-testing-guide.md  how-it-works.md  interaction.md  metrics.md  node-edge-dynamics-analysis.md  packaging.md  performance.md  research-comparison.md  research-landscape.md  research-questions.md  spotxy-params-and-webgpu.md  visualizer-games.md  what-llms-dont-do-yet.md
doc/architecture/: architecture.md  brain-image.md  daemon-protocol.md  experts.md  graph-visualization.md  interaction.md  language-contract.md  llm-integration.md  memory-bottlenecks.md  refinements-2026q1-dynamics-and-learning.md  scaling-modules-routing.md  stability-plasticity-control.md  wasm-edge-hosting.md
doc/development/: dashboard.md  metrics.md  web-desktop-parity.md
doc/games/: capabilities-checklist.md  game-testing-guide.md  pong-performance.md  visualizer-games.md
doc/learning/: accelerated-learning.md  spatial-temporal-design.md
doc/maths/: the-math-behind.md
doc/overview/: how-it-works.md  problem-sets.md  uniqueness-and-related-systems.md
doc/proposals/: flowchart TD.mmd  graph-visualization-roadmap.md  real-world-integration-demo.md
docs/: book.toml
docs/src/: SUMMARY.md  deployment-web.md  getting-started.md  node-edge-dynamics-analysis.md  spotxy-params-and-webgpu.md
docs/src/architecture/: daemon-protocol.md  memory-bottlenecks.md  scaling-modules-routing.md  stability-plasticity-control.md  wasm-edge-hosting.md
docs/src/development/: dashboard.md  metrics.md  packaging.md  web-desktop-parity.md
docs/src/games/: metrics-per-game.md  tasks-learning-2026q1.md  visualizer-games.md
docs/src/maths/: the-math-behind.md
docs/src/overview/: how-it-works.md  problem-sets.md  uniqueness-and-related-systems.md  web-ui-about.md  what-llms-dont-do-yet.md
docs/src/proposals/: enhancement-proposal.md  real-world-integration-demo.md
docs/theme/: head.hbs
scripts/: dev.sh  game_learning_sweep.sh
src/: assays.rs  causality.rs  eval.rs  lib.rs  main.rs  substrate.rs  supervisor.rs
src/core/: causality.rs  gpu.rs  prng.rs  storage.rs  substrate.rs  supervisor.rs
src/experiments/: assays.rs  env_pong.rs  env_spot_xy.rs  mod.rs
src/observer/: mod.rs
