# Braine workspace root
# All crates live under crates/ directory

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/brained",
    "crates/braine_desktop",
    "crates/shared/braine_games",
    "crates/braine_web",
]

# Shared settings for all workspace members
[workspace.package]
version = "0.1.0"
edition = "2021"

# Common dependencies used by multiple crates
[workspace.dependencies]
braine = { path = "crates/core", default-features = false }
braine_games = { path = "crates/shared/braine_games" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lz4_flex = { version = "0.11", default-features = false }
