[package]
name = "braine_desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = { version = "1.14", default-features = false, features = ["std", "compat-1-2", "backend-winit-x11", "renderer-winit-software"] }
braine = { path = "../core" }
braine_games = { path = "../shared/braine_games" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
slint-build = "1.14"
