[package]
name = "braine_web"
version = "0.1.0"
edition = "2021"

[features]
# Default build is a stub so native/windows builds and ./scripts/dev.sh keep working.
default = []
# Enable the real Leptos WASM app.
web = [
	"dep:leptos",
	"dep:js-sys",
	"dep:wasm-bindgen",
	"dep:wasm-bindgen-futures",
	"dep:pulldown-cmark",
	"dep:web-sys",
	"dep:serde",
	"dep:braine_games",
	"dep:serde_json",
	"braine/std",
]

# Enable GPU execution tier via wgpu/WebGPU.
# Note: learning/plasticity updates are still CPU today; GPU accelerates the dense
# dynamics update inside `Brain::step()`.
gpu = ["web", "braine/gpu"]

[dependencies]
braine = { path = "../core", default-features = false, features = ["serde"] }
braine_games = { path = "../shared/braine_games", default-features = false, features = ["braine"], optional = true }

leptos = { version = "0.7", optional = true, default-features = false, features = ["csr"] }
js-sys = { version = "=0.3.76", optional = true }
wasm-bindgen = { version = "=0.2.99", optional = true }
wasm-bindgen-futures = { version = "=0.4.49", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
pulldown-cmark = { version = "0.12", optional = true }
web-sys = { version = "=0.3.76", optional = true, default-features = false, features = [
	"Window",
	"Document",
	"Storage",
	"Element",
	"DomRect",
	"console",
	"Blob",
	"Url",
	"HtmlAnchorElement",
	"HtmlInputElement",
	"File",
	"FileList",
	"FileReader",
	"ProgressEvent",
	"HtmlCanvasElement",
	"MouseEvent",
	"WheelEvent",
	"CanvasRenderingContext2d",
	"CanvasGradient",
	"IdbFactory",
	"IdbOpenDbRequest",
	"IdbDatabase",
	"IdbObjectStore",
	"IdbRequest",
	"IdbTransaction",
	"IdbTransactionMode",
	"Event",
	"Navigator",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"

[lib]
path = "src/lib.rs"
