[package]
name = "brained"
version = "0.1.0"
edition = "2021"

[features]
default = []

# Forward execution-tier features to the core crate.
gpu = ["braine/gpu"]
simd = ["braine/simd"]
parallel = ["braine/parallel"]

[[bin]]
name = "brained"
path = "src/main.rs"

[dependencies]
braine = { path = "../core", features = ["serde"] }
braine_games = { workspace = true, features = ["braine"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
dirs = "6.0"  # Cross-platform app directories
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(unix)'.dependencies]
tokio = { version = "1.42", features = ["net", "rt-multi-thread", "macros", "signal"] }

[target.'cfg(windows)'.dependencies]
tokio = { version = "1.42", features = ["net", "rt-multi-thread", "macros"] }
