[package]
name = "braine_games"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []
braine = ["std", "dep:braine"]

[dependencies]
# Keep this crate lightweight and wasm-friendly.

# Optional: allow certain games to directly apply stimuli to a `braine::substrate::Brain`.
# This is used by the daemon today, and can be disabled for WASM builds.
braine = { workspace = true, optional = true, features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"
